integration with search engine

--- a/src/DAM.Core.GraphQL.Configuration/DAM.Core.GraphQL.Configuration.csproj
+++ b/src/DAM.Core.GraphQL.Configuration/DAM.Core.GraphQL.Configuration.csproj
@@ -1,16 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GraphQL" Version="3.0.0-preview-1430" />
+    <PackageReference Include="GraphQL-Parser" Version="5.1.0" />
+    <PackageReference Include="GraphQL" Version="3.0.0-preview-1490" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DAM.Core.GraphQL.Repository\DAM.Core.GraphQL.Repository.csproj" />
     <ProjectReference Include="..\DAM.Core.GraphQL.Schemas\DAM.Core.GraphQL.Schemas.csproj" />
+    <ProjectReference Include="..\DAM.Core.GraphQL.SearchProxy\DAM.Core.GraphQL.SearchProxy.csproj" />
   </ItemGroup>
 
 </Project>
