--- a/src/DAM.Core.GraphQL.Server/appsettings.json
+++ b/src/DAM.Core.GraphQL.Server/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "SearchProxySettings": {
+    "Url": "https://search.skf.com/dev/search-shelf/rest/apps/shelfapp/searchers/library"
+  },
+
+  "GraphQLSettings": {
+    "EnableMetrics": true,
+    "ExposeExceptions": true
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
