--- a/src/DAM.Core.GraphQL.Server/DAM.Core.GraphQL.Server.csproj
+++ b/src/DAM.Core.GraphQL.Server/DAM.Core.GraphQL.Server.csproj
@@ -5,13 +5,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="3.5.0-alpha0027" />
+    <PackageReference Include="GraphQL-Parser" Version="5.1.0" />
+    <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="3.5.0-alpha0046" />
+    <PackageReference Include="GraphQL.Server.Transports.AspNetCore.SystemTextJson" Version="3.5.0-alpha0046" />
+    <PackageReference Include="GraphQL.SystemTextJson" Version="3.0.0-preview-1490" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DAM.Core.GraphQL.Configuration\DAM.Core.GraphQL.Configuration.csproj" />
     <ProjectReference Include="..\DAM.Core.GraphQL.Repository.Akka\DAM.Core.GraphQL.Repository.Akka.csproj" />
     <ProjectReference Include="..\DAM.Core.GraphQL.Repository.Fakes\DAM.Core.GraphQL.Repository.Fakes.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
