add akka-service to AssetAkkaRepository

--- a/src/DAM.Core.GraphQL.Repository.Akka/DAM.Core.GraphQL.Repository.Akka.csproj
+++ b/src/DAM.Core.GraphQL.Repository.Akka/DAM.Core.GraphQL.Repository.Akka.csproj
@@ -1,10 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\DAM.Akka\src\DAM.Core.Assets.Actors\DAM.Core.Actors.csproj" />
+    <ProjectReference Include="..\..\..\DAM.Akka\src\DAM.Core.Infrastructure\DAM.Core.Infrastructure.csproj" />
     <ProjectReference Include="..\DAM.Core.GraphQL.Repository\DAM.Core.GraphQL.Repository.csproj" />
     <ProjectReference Include="..\DAM.Core.GraphQL.Schemas\DAM.Core.GraphQL.Schemas.csproj" />
   </ItemGroup>
