Add folder endpoints

--- a/src/DAM.Core.GraphQL.Repository.Fakes/DAM.Core.GraphQL.Repository.Fakes.csproj
+++ b/src/DAM.Core.GraphQL.Repository.Fakes/DAM.Core.GraphQL.Repository.Fakes.csproj
@@ -14,6 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="WorkspaceData\Angular Contact Ball Bearings and MSP.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="TermSetsData\Asset types.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -23,6 +26,9 @@
     <None Update="TermSetsData\Industries.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="WorkspaceData\Maintenance Products.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="TermSetsData\Products.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -31,6 +37,9 @@
     </None>
     <None Update="TermSetsData\Services and solutions.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="WorkspaceData\SKF USA Inc.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
